--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "export NODE_ENV=test && next build",
     "start": "next start"
   },
   "dependencies": {
-    "next": "canary",
+    "next": "13.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
